fix "jumping" checkboxes (related to remarks from Oleh Aloshkin)

--- a/task_11/index.html
+++ b/task_11/index.html
@@ -220,37 +220,43 @@
           </h1>
           <ul class="tabbed dots-hidden">
               <li class="padded">
-                <label class="select-type" for="friendly-casual">
-                    <input id="friendly-casual" name="tone" type="radio" value="Friendly/Casual" required hidden checked>
-                    <div class="select-wrapper">
-                      <p class="with-padding">
-                        <i class="fa fa-comments fa-fw" aria-hidden="true"></i>&nbsp;
-                        Friendly/Casual
-                      </p>
-                    </div>
-                </label>
+                <div class="wrapper">
+                  <label class="select-type" for="friendly-casual">
+                      <input id="friendly-casual" name="tone" type="radio" value="Friendly/Casual" required hidden checked>
+                      <div class="select-wrapper">
+                        <p class="with-padding">
+                          <i class="fa fa-comments fa-fw" aria-hidden="true"></i>&nbsp;
+                          Friendly/Casual
+                        </p>
+                      </div>
+                  </label>
+                </div>
               </li>
               <li class="padded">
-                <label class="select-type" for="corporate-pro">
-                    <input id="corporate-pro" name="tone" type="radio" value="Corporate/Pro" required hidden>
-                    <div class="select-wrapper padded-more">
-                      <p class="with-padding">
-                        <i class="fa fa-suitcase fa-fw" aria-hidden="true"></i>&nbsp;
-                        Corporate/Pro
-                      </p>
-                    </div>
-                </label>
+                <div class="wrapper">
+                  <label class="select-type" for="corporate-pro">
+                      <input id="corporate-pro" name="tone" type="radio" value="Corporate/Pro" required hidden>
+                      <div class="select-wrapper padded-more">
+                        <p class="with-padding">
+                          <i class="fa fa-suitcase fa-fw" aria-hidden="true"></i>&nbsp;
+                          Corporate/Pro
+                        </p>
+                      </div>
+                  </label>
+                </div>
               </li>
               <li class="padded">
-                <label class="select-type" for="media-formal">
-                    <input id="media-formal" name="tone" type="radio" value="Media/Formal" required hidden>
-                    <div class="select-wrapper padded-more">
-                      <p class="with-padding">
-                        <i class="fa fa-bullhorn fa-fw" aria-hidden="true"></i>&nbsp;
-                        Media/Formal
-                      </p>
-                    </div>
-                </label>
+                <div class="wrapper">
+                  <label class="select-type" for="media-formal">
+                      <input id="media-formal" name="tone" type="radio" value="Media/Formal" required hidden>
+                      <div class="select-wrapper padded-more">
+                        <p class="with-padding">
+                          <i class="fa fa-bullhorn fa-fw" aria-hidden="true"></i>&nbsp;
+                          Media/Formal
+                        </p>
+                      </div>
+                  </label>
+                </div>
               </li>
           </ul>
         </fieldset>
@@ -335,24 +341,30 @@
             </div>
           </div>
           <div class="flex-container spaced-between tabbed seven-tenth-width">
-              <label class="select-type quartered" for="by-card">
+            <div class="wrapper quartered">
+              <label class="select-type" for="by-card">
                 <input id="by-card" name="payment-type" type="radio" value="by-card" required hidden checked>
                 <div class="select-wrapper center">
                   <img class="select-img three-times-quartered" src="img/cards.png" alt="Cards">
                 </div>
               </label>
-              <label class="select-type quartered" for="by-paypal">
+            </div>
+            <div class="wrapper quartered">
+              <label class="select-type" for="by-paypal">
                 <input id="by-paypal" name="payment-type" type="radio" value="by-paypal" required hidden>
                 <div class="select-wrapper center">
                   <img class="select-img three-times-quartered" src="img/paypal.png" alt="PayPal">
                 </div>
               </label>
-              <label class="select-type quartered" for="by-amazon">
+            </div>
+            <div class="wrapper quartered">
+              <label class="select-type" for="by-amazon">
                 <input id="by-amazon" name="payment-type" type="radio" value="by-amazon" required hidden>
                 <div class="select-wrapper center">
                   <img class="select-img three-times-quartered" src="img/amazon.png" alt="Amazon">
                 </div>
               </label>
+            </div>
           </div>
           <div class="flex-start tabbed with-top-margin">
             <div>
