fix "both frames are visible" issue

--- a/task_11/index.html
+++ b/task_11/index.html
@@ -82,30 +82,27 @@
             <h1 class="center padded">SELECT WHAT YOU WANT TO TRANSLATE</h1>
           </div>
           <div class="flex-container spaced-around">
-              <div class="image-radio">
+              <div class="image-radio wrapper">
                 <label class="select-type" for="website">
                   <input id="website" name="trans-type" type="radio" value="Website" required hidden>
-                  <div class="select-wrapper center">
+                  <div class="select-wrapper">
                     <img class="select-img tile" src="img/website.png" alt="Website">
-                    <p>Website</p>
                   </div>
                 </label>
               </div>
-              <div class="image-radio">
+              <div class="image-radio wrapper">
                 <label class="select-type" for="documents">
                   <input id="documents" name="trans-type" type="radio" value="Documents" required hidden checked>
-                  <div class="select-wrapper center">
+                  <div class="select-wrapper">
                     <img class="select-img tile" src="img/documents.png" alt="Documents">
-                    <p>Documents</p>
                   </div>
                 </label>
               </div>
-              <div class="image-radio">
+              <div class="image-radio wrapper">
                 <label class="select-type" for="social-account">
                   <input id="social-account" name="trans-type" type="radio" value="Social Account" required hidden>
-                  <div class="select-wrapper center">
+                  <div class="select-wrapper">
                     <img class="select-img tile" src="img/social-account.png" alt="Social Account">
-                    <p>Social Account</p>
                   </div>
                 </label>
               </div>
