--- a/task_10/index.html
+++ b/task_10/index.html
@@ -4,28 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script type="text/javascript" src="js/config.js"></script>
-    <script type="text/javascript" src="js/helper.js"></script>
-    <script type="text/javascript" src="js/models/model.js"></script>
-    <script type="text/javascript" src="js/views/view.js"></script>
-    <script type="text/javascript" src="js/services/weather_service.js"></script>
-    <script type="text/javascript" src="js/services/storage_service.js"></script>
-    <script type="text/javascript" src="js/services/list_service.js"></script>
-    <script type="text/javascript" src="js/services/favorites_service.js"></script>
-    <script type="text/javascript" src="js/services/history_service.js"></script>
-    <script type="text/javascript" src="js/controllers/controller.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Weather App</title>
   </head>
   <body>
     <header class="header">
       <div class="flex-container">
           <span>
-            <button class="btn" id="add-favorite-btn" title="Adds city to favorites">
+            <button class="btn" id="add-favorite-btn" title="Adds city to favorites" aria-label="Add favorite location">
               <i class="fa fa-star" aria-hidden="true"></i>
             </button>
           </span>
@@ -41,52 +30,56 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class="flex-container current-day" id="current-day"></div>
-      </section>
-      <section>
-        <div class="flex-container another-days" id="another-days"></div>
+      <section class="flex-container current-day" id="current-day"></section>
+      <section class="flex-container another-days" id="another-days"></section>
+      <section class="flex-container">
+        <div class="favorites">
+          <i class="fa fa-star" aria-hidden="true"></i>
+          <span>
+            <input class="btn" id="favorites-field" type="text" list="favorites-lst" placeholder="Favorites..." title="List of favorites">
+            <datalist id="favorites-lst"></datalist>
+          </span>
+          <span>
+            <button class="btn" id="favorites-go-btn" title="Loads selected city data" aria-label="Search favorite location">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </span>
+          <span>
+            <button class="btn" id="clear-favorites-btn" title="Clears list of favorites" aria-label="Clear list of favorites">
+              <i class="fa fa-times-circle" aria-hidden="true"></i>
+            </button>
+          </span>
+        </div>
+        <div class="history">
+          <i class="fa fa-history" aria-hidden="true"></i>
+          <span>
+            <input class="btn" id="history-field" type="text" list="history-lst" placeholder="History..." title="History list">
+            <datalist id="history-lst"></datalist>
+          </span>
+          <span>
+            <button class="btn" id="history-go-btn" title="Loads selected city data" aria-label="Search history location">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </button>
+          </span>
+          <span>
+            <button class="btn" id="clear-history-btn" title="Clears history list" aria-label="Clear history list">
+              <i class="fa fa-times-circle" aria-hidden="true"></i>
+            </button>
+          </span>
+        </div>
       </section>
     </main>
-    <footer class="flex-container footer">
-      <div class="favorites">
-        <span>
-          <i class="fa fa-star" aria-hidden="true"></i>
-        </span>
-        <span>
-          <input class="btn" id="favorites-field" type="text" list="favorites-lst" placeholder="Favorites..." title="List of favorites">
-          <datalist id="favorites-lst"></datalist>
-        </span>
-        <span>
-          <button class="btn" id="favorites-go-btn" title="Loads selected city data">
-            <i class="fa fa-search" aria-hidden="true"></i>
-          </button>
-        </span>
-        <span>
-          <button class="btn" id="clear-favorites-btn" title="Clears list of favorites">
-            <i class="fa fa-times-circle" aria-hidden="true"></i>
-          </button>
-        </span>
-      </div>
-      <div class="history">
-        <span>
-          <i class="fa fa-history" aria-hidden="true"></i>
-        </span>
-        <span>
-          <input class="btn" id="history-field" type="text" list="history-lst" placeholder="History..." title="History list">
-          <datalist id="history-lst"></datalist>
-        </span>
-        <span>
-          <button class="btn" id="history-go-btn" title="Loads selected city data">
-            <i class="fa fa-search" aria-hidden="true"></i>
-          </button>
-        </span>
-        <span>
-          <button class="btn" id="clear-history-btn" title="Clears history list">
-            <i class="fa fa-times-circle" aria-hidden="true"></i>
-          </button>
-        </span>
-      </div>
-    </footer>
+    <footer class="flex-container footer"></footer>
+    <script src="js/config.js"></script>
+    <script src="js/helper.js"></script>
+    <script src="js/models/model.js"></script>
+    <script src="js/views/view.js"></script>
+    <script src="js/services/weather_service.js"></script>
+    <script src="js/services/storage_service.js"></script>
+    <script src="js/services/list_service.js"></script>
+    <script src="js/services/favorites_service.js"></script>
+    <script src="js/services/history_service.js"></script>
+    <script src="js/controllers/controller.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
