--- a/task_10/index.html
+++ b/task_10/index.html
@@ -69,17 +69,6 @@
         </div>
       </section>
     </main>
-    <footer class="flex-container footer"></footer>
-    <script src="js/config.js"></script>
-    <script src="js/helper.js"></script>
-    <script src="js/models/model.js"></script>
-    <script src="js/views/view.js"></script>
-    <script src="js/services/weather_service.js"></script>
-    <script src="js/services/storage_service.js"></script>
-    <script src="js/services/list_service.js"></script>
-    <script src="js/services/favorites_service.js"></script>
-    <script src="js/services/history_service.js"></script>
-    <script src="js/controllers/controller.js"></script>
-    <script src="js/app.js"></script>
+    <script src="dist/bundle.js" type="module"></script>
   </body>
 </html>
