add aria-labelledby to base-units element

--- a/task_10/index.html
+++ b/task_10/index.html
@@ -22,7 +22,7 @@
             <input class="btn wide" id="loc-field" type="text" placeholder="Enter location..." title="Enter location here">
           </span>
           <span class="base-units">
-            <select class="btn" id="base-units" title="Selects metric or imperial units">
+            <select class="btn" id="base-units" title="Selects metric or imperial units" aria-labelledby="base-units">
               <option value="metric">&deg;C, m/s</option>
               <option value="imperial">&deg;F, mph</option>
             </select>
